--- a/Porta/src/app/app.component.html
+++ b/Porta/src/app/app.component.html
@@ -1,3 +1,3 @@
-<p>ciao sono l'{{parola}} componente</p>
+<p>ciao sono l'<span>{{parola}}</span> componente</p>
 <app-secondo></app-secondo>
 <app-terzo></app-terzo>
