--- a/Porta02.2/src/app/macchina/macchina.component.html
+++ b/Porta02.2/src/app/macchina/macchina.component.html
@@ -1,1 +1,5 @@
-<p>{{macchina}}</p>
+<div class= "card  w-50 p-3 mt-4 container" style=" border-radius: 0%;height:10ch;"> 
+  <div class="card-body">
+    <p>{{macchina}}</p>     
+  </div>
+</div>
