--- a/Porta02.2/src/app/macchina/macchina.component.html
+++ b/Porta02.2/src/app/macchina/macchina.component.html
@@ -1,4 +1,4 @@
-<div class= "card  w-50 p-3 mt-4 container" style=" border-radius: 0%;height:10ch;"> 
+<div class= "card  w-50 p-3 mt-4 container" style=" border-radius: 0%;height:10ch;background-color: #cfe2f3;"> 
   <div class="card-body">
     <p>{{macchina}}</p>     
   </div>
