--- a/angular-routing/src/app/search/search.component.html
+++ b/angular-routing/src/app/search/search.component.html
@@ -21,6 +21,7 @@
             <div class="caption">
               <h3>
                 <a [routerLink]="['/artists', t.artists[0].id]">
+                  {{t.artists[0].id}}
                   {{ t.artists[0].name }}
                 </a>
               </h3>
