--- a/angular-routing/src/app/album/album.component.html
+++ b/angular-routing/src/app/album/album.component.html
@@ -1,1 +1,9 @@
-<p>album works!</p>
+<div>
+    <h1>{{album.name}}</h1>
+    <p>{{album.artists[0].name}}</p>
+    <p>
+        <img src="{{album.images[1].url}}" alt="">
+    </p>
+    <p>{{album.items}}</p>
+    {{album|json}}
+</div>
