--- a/cucina/src/app/prodotto/prodotto.component.html
+++ b/cucina/src/app/prodotto/prodotto.component.html
@@ -1,9 +1,14 @@
-<div class="d-flex justify-content-center">
+<div class="container">
     <div *ngIf="product">
-        <img src="{{product.product.image_front_url}}">
         <h4>{{product.product.product_name}}</h4>
+        <img src="{{product.product.image_front_url}}">
+
+        <p> <b>Brand:</b> {{product.product.brands_tags[0]}} </p>
+        <p> <b>Categorie:</b> {{product.product.categories}} </p>
+
+        
+        <p><a href (click)="back()">Back</a></p>
     </div>
-    <p><a href (click)="back()">Back</a></p>
 </div>
 
 
