--- a/Esplorazione-di-API-Rest/src/app/app.component.html
+++ b/Esplorazione-di-API-Rest/src/app/app.component.html
@@ -6,7 +6,7 @@
 </p>
 
 <div *ngIf="results"> 
-   {{results.response[0].country.name}}
+   {{results.response[0].league.id}}
 </div>
 
 <router-outlet></router-outlet> 
